# untar

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  README_CN.md  nfpm.yaml
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  build-deb.yml  ci.yml  coverage-pages.yml  dependabot-auto-merge.yml  release.yml
docs/: dependabot-optimization-notes.md  development-plan.md  format-detection-plan.md  format-expansion-plan.md  implementation-plan.md  multi-archive-plan.md  phase-f-plan.md  supported-formats.md
java/: pom.xml
java/src/main/java/com/xenoamess/untar/: Main.java
rust/: Cargo.toml  Cross.toml  build.rs
rust/src/: cli.rs  cracker.rs  extract.rs  lib.rs  main.rs
rust/src/archive/: ar.rs  cab.rs  cpio.rs  deb.rs  format.rs  iso.rs  lha.rs  lzo.rs  mod.rs  rar.rs  rpm.rs  sevenz.rs  squashfs.rs  stream.rs  tar.rs  unarc.rs  xar.rs  zip.rs
rust/tests/: integration.rs
rust/tests/fixtures/unarc/: .gitattributes
rust/wix/: main.wxs
