[package]
name = "untar"
version = "1.0.3"
edition = "2021"
authors = ["xenoamess"]
license = "Apache-2.0"
repository = "https://github.com/XenoAmess-Auto/untar"
description = "Extract tar/tar.gz/tgz/tar.xz/tar.bz2/tar.zip packages"

[dependencies]
# Minimal tar extraction with support for compressed archives
tar = "0.4"
# XZ (lzma2) compression support
xz2 = "0.1"
# BZip2 compression support
bzip2 = "0.6"
# GZip compression support
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
# Zip archive support (with AES encryption for password-protected archives)
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
# 7z archive support
sevenz-rust2 = "0.20.2"
# RAR archive support
rars = "0.4"

# Use anyhow for error handling (minimal overhead)
anyhow = "1.0"
# Clap for CLI argument parsing (using features to minimize size)
clap = { version = "4.6", features = ["cargo", "derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.2"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Simpler panic handling
overflow-checks = false
