[package]
name = "untar"
version = "1.1.1"
edition = "2021"
authors = ["xenoamess"]
license = "Apache-2.0"
repository = "https://github.com/XenoAmess-Auto/untar"
description = "A fast command-line tool for extracting archives and compressed files"

[dependencies]
# Minimal tar extraction with support for compressed archives
tar = "0.4"
# XZ (lzma2) compression support
liblzma = "0.4"
# BZip2 compression support
bzip2 = "0.6"
# GZip compression support
flate2 = { version = "1.1", default-features = false, features = ["zlib"] }
# Zip archive support (with AES encryption for password-protected archives)
zip = { version = "8", default-features = false, features = ["deflate", "aes-crypto"] }
# 7z archive support
sevenz-rust2 = "0.21.3"
# RAR archive support
rars = "0.4"
# TAR LZMA extension (raw .lzma / .tar.lzma)
lzma-rs = "0.3"
# TAR lzip / .lz
lzma-rust2 = "0.16"
# TAR zstd / .zst stream
ruzstd = "0.8"
# TAR lz4 / .lz4 stream
lz4_flex = "0.13"
# TAR brotli / .br stream
brotli-decompressor = "5"
# Windows Cabinet archive support
cab = "0.6"
# Unix archive (.ar) support
ar = "0.9"
# cpio archive support
cpio = "0.4"
# ISO 9660 image support
iso9660-rs = "1.0"
# Block I/O trait used by iso9660-rs
gpt_disk_io = { version = "0.16", features = ["std"] }
gpt_disk_types = "0.16"
# XAR archive support
xara = "0.3"
# LHA / LZH archive support (pinned for Rust 1.65 compatibility)
delharc = "0.6.2"
# SquashFS image support
backhand = { version = "0.25", default-features = false, features = ["gzip", "xz", "zstd", "lz4"] }
# RPM package support
rpm = { version = "0.25", default-features = false, features = ["payload", "gzip-compression", "bzip2-compression", "xz-compression", "zstd-compression"] }
# Legacy archive formats: ACE, ARC, ZOO, Unix compress (.Z / .tar.Z)
unarc-rs = "0.6"
# LZO1X decompression for .lzo / .tar.lzo
lzo = "0.1"

# Use anyhow for error handling (minimal overhead)
anyhow = "1.0"
# Clap for CLI argument parsing (using features to minimize size)
clap = { version = "4.6", features = ["cargo", "derive"] }
# Progress bar for extraction
indicatif = "0.17"
# Temporary files for compression layers without Read wrappers
tempfile = "3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
# Test encoders for formats without Rust Write wrappers in [dependencies]
zstd = "0.13"
brotli = "7"
lzokay = "2"
adler = "1"

[build-dependencies]
clap = { version = "4.6", features = ["derive"] }
clap_complete = "4.6"
clap_mangen = "0.2"

[profile.release]
opt-level = "z"        # Optimize for size
lto = true             # Link-time optimization
codegen-units = 1      # Better optimization
strip = true           # Strip symbols
panic = "abort"        # Simpler panic handling
overflow-checks = false
